--- a/dashboard.html
+++ b/dashboard.html
@@ -41,6 +41,7 @@
         header {
             text-align: center;
             margin-bottom: 2rem;
+            position: relative;
         }
 
         h1 {
@@ -53,6 +54,56 @@
         .subtitle {
             color: var(--text-secondary);
             font-size: 1rem;
+        }
+
+        .logout-btn {
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 0.75rem 1.5rem;
+            background: var(--bg-card);
+            color: var(--text-primary);
+            border: 1px solid var(--border);
+            border-radius: 8px;
+            font-size: 0.875rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .logout-btn:hover {
+            background: var(--accent);
+            color: white;
+            border-color: var(--accent);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(94, 114, 228, 0.3);
+        }
+
+        .logout-btn:active {
+            transform: translateY(0);
+        }
+
+        .user-info {
+            position: absolute;
+            top: 0;
+            left: 0;
+            padding: 0.75rem 1.25rem;
+            background: var(--bg-card);
+            border: 1px solid var(--border);
+            border-radius: 8px;
+            font-size: 0.875rem;
+            color: var(--text-secondary);
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .user-info span {
+            font-weight: 600;
+            color: var(--accent);
         }
 
         /* Tabs de Vista */
@@ -634,6 +685,21 @@
                 font-size: 2rem;
             }
 
+            header {
+                margin-bottom: 3rem;
+            }
+
+            .logout-btn, .user-info {
+                position: static;
+                margin: 0.5rem auto;
+                justify-content: center;
+            }
+
+            .logout-btn {
+                width: 100%;
+                max-width: 300px;
+            }
+
             .stats-grid {
                 grid-template-columns: 1fr 1fr;
             }
@@ -687,8 +753,15 @@
 <body>
     <div class="container">
         <header>
+            <div class="user-info">
+                <span id="userName">👤 unw</span>
+            </div>
             <h1>Dashboard de Piezas</h1>
             <p class="subtitle">Seguimiento en Tiempo Real</p>
+            <button class="logout-btn" onclick="logout()">
+                <span>🚪</span>
+                Cerrar Sesión
+            </button>
         </header>
 
         <!-- Tabs de Vista -->
@@ -823,6 +896,44 @@
     </div>
 
     <script>
+        // ========== AUTENTICACIÓN ==========
+        // Verificar sesión al cargar la página
+        (function checkAuth() {
+            const session = localStorage.getItem('unwSession');
+
+            if (!session) {
+                // No hay sesión, redirigir al login
+                window.location.href = 'index.html';
+                return;
+            }
+
+            try {
+                const sessionData = JSON.parse(session);
+
+                // Verificar que la sesión sea válida
+                if (!sessionData.user || !sessionData.token) {
+                    throw new Error('Sesión inválida');
+                }
+
+                // Actualizar nombre de usuario en el header
+                document.getElementById('userName').textContent = '👤 ' + sessionData.user;
+
+            } catch (error) {
+                console.error('Error en la sesión:', error);
+                localStorage.removeItem('unwSession');
+                window.location.href = 'index.html';
+            }
+        })();
+
+        // Función de logout
+        function logout() {
+            if (confirm('¿Estás seguro de que deseas cerrar sesión?')) {
+                localStorage.removeItem('unwSession');
+                window.location.href = 'index.html';
+            }
+        }
+
+        // ========== DASHBOARD ==========
         let allTasks = [];
         let filteredTasks = [];
         let currentView = 'general';
